--- a/SSLR/Packages/manifest.json
+++ b/SSLR/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ads": "4.4.2",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.analytics": "3.8.1",
+    "com.unity.animation.rigging": "1.2.1",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.development": "1.0.1",
     "com.unity.feature.vr": "1.0.0",
@@ -14,7 +15,9 @@
     "com.unity.inputsystem": "1.11.2",
     "com.unity.learn.iet-framework": "3.1.3",
     "com.unity.purchasing": "4.11.0",
+    "com.unity.recorder": "4.0.3",
     "com.unity.render-pipelines.universal": "14.0.11",
+    "com.unity.terrain-tools": "5.0.5",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.6",
