--- a/SSLR/.gitattributes
+++ b/SSLR/.gitattributes
@@ -129,3 +129,7 @@ Assets/Plugins/**       linguist-vendored
 *.SO                    filter=lfs diff=lfs merge=lfs -text
 *.dat                   filter=lfs diff=lfs merge=lfs -text
 *.DAT                   filter=lfs diff=lfs merge=lfs -text
+
+
+# hot fix for terrain
+*Assets\WorldCreatorTerrains\WC_Terrain\WC_Terrain_0_0.asset eol=lf -text
