--- a/SSLR/.gitattributes
+++ b/SSLR/.gitattributes
@@ -130,6 +130,5 @@ Assets/Plugins/**       linguist-vendored
 *.dat                   filter=lfs diff=lfs merge=lfs -text
 *.DAT                   filter=lfs diff=lfs merge=lfs -text
 
-
-# hot fix for terrain
-*Assets\WorldCreatorTerrains\WC_Terrain\WC_Terrain_0_0.asset eol=lf -text
+# worldcreator terrain asset files
+Assets/WorldCreatorTerrains/*.asset -text
