--- a/SSLR/.gitattributes
+++ b/SSLR/.gitattributes
@@ -132,3 +132,4 @@ Assets/Plugins/**       linguist-vendored
 
 # worldcreator terrain asset files
 Assets/WorldCreatorTerrains/*.asset -text
+*.terrain.asset binary
