--- a/SSLR/.gitattributes
+++ b/SSLR/.gitattributes
@@ -131,4 +131,5 @@ Assets/Plugins/**       linguist-vendored
 *.DAT                   filter=lfs diff=lfs merge=lfs -text
 
 # worldcreator terrain asset files
-# Assets/WorldCreatorTerrains/WC_TerrainWC_Terrain_0_0.asset -binary
+Assets/WorldCreatorTerrains/WC_TerrainWC_Terrain_0_0.asset -text -diff
+Assets/WorldCreatorTerrains/*.asset -text -diff
