--- a/SSLR/Packages/manifest.json
+++ b/SSLR/Packages/manifest.json
@@ -14,6 +14,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.11.2",
     "com.unity.learn.iet-framework": "3.1.3",
+    "com.unity.probuilder": "5.2.3",
     "com.unity.purchasing": "4.11.0",
     "com.unity.recorder": "4.0.3",
     "com.unity.render-pipelines.high-definition": "14.0.11",
